--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_monitoringDetailFragment"
+            app:destination="@id/monitoringDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -69,4 +72,9 @@
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/monitoringDetailFragment"
+        android:name="com.evomo.powersmart.ui.screen.monitoring_detail.MonitoringDetailFragment"
+        android:label="fragment_monitoring_detail"
+        tools:layout="@layout/fragment_monitoring_detail" />
 </navigation>
