--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -11,14 +11,14 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_homeFragment_to_notificationsFragment"
-            app:destination="@id/notificationsFragment" />
-        <action
             android:id="@+id/action_homeFragment_to_anomalyDetailFragment"
             app:destination="@id/anomalyDetailFragment" />
         <action
             android:id="@+id/action_homeFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_monitoringDetailFragment"
+            app:destination="@id/monitoringDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -57,23 +57,10 @@
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/notificationsFragment"
-        android:name="com.evomo.powersmart.ui.screen.notifications.NotificationsFragment"
-        android:label="fragment_notifications"
-        tools:layout="@layout/fragment_notifications">
-        <action
-            android:id="@+id/action_notificationsFragment_to_anomalyDetailFragment"
-            app:destination="@id/anomalyDetailFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/anomalyDetailFragment"
         android:name="com.evomo.powersmart.ui.screen.anomaly_detail.AnomalyDetailFragment"
         android:label="fragment_anomaly_detail"
-        tools:layout="@layout/fragment_anomaly_detail">
-        <argument
-            android:name="anomalyId"
-            app:argType="integer" />
-    </fragment>
+        tools:layout="@layout/fragment_anomaly_detail" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.evomo.powersmart.ui.screen.profile.ProfileFragment"
@@ -84,5 +71,15 @@
             app:destination="@id/loginFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/monitoringDetailFragment"
+        android:name="com.evomo.powersmart.ui.screen.monitoring_detail.MonitoringDetailFragment"
+        android:label="fragment_monitoring_detail"
+        tools:layout="@layout/fragment_monitoring_detail" >
+        <argument
+            android:name="location"
+            app:argType="com.evomo.powersmart.ui.screen.home.Location"
+            android:defaultValue="AHU_LANTAI_2" />
     </fragment>
 </navigation>
